--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
 
     <!--Fuentes Google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -159,7 +159,7 @@
               <!-- Product image-->
               <img
                 class="card-img-top"
-                src="/assets/img/logitech-cam.png"
+                src="./assets/img/logitech-cam.png"
                 alt="..."
               />
               <!-- Product details-->
@@ -206,7 +206,7 @@
               <!-- Product image-->
               <img
                 class="card-img-top"
-                src="/assets/img/AppleMacMini.png"
+                src="./assets/img/AppleMacMini.png"
                 alt="..."
               />
               <!-- Product details-->
@@ -236,7 +236,7 @@
               <!-- Product image-->
               <img
                 class="card-img-top"
-                src="/assets/img/Ryzen7.png"
+                src="./assets/img/Ryzen7.png"
                 alt="..."
               />
               <!-- Product details-->
@@ -280,7 +280,7 @@
               <!-- Product image-->
               <img
                 class="card-img-top"
-                src="/assets/img/MouseLogi.png"
+                src="./assets/img/MouseLogi.png"
                 alt="..."
               />
               <!-- Product details-->
@@ -310,7 +310,7 @@
               <!-- Product image-->
               <img
                 class="card-img-top"
-                src="/assets/img/RTX.png"
+                src="./assets/img/RTX.png"
                 alt="..."
               />
               <!-- Product details-->
@@ -344,7 +344,7 @@
               <!-- Product image-->
               <img
                 class="card-img-top"
-                src="/assets/img/AsusTUF.png"
+                src="./assets/img/AsusTUF.png"
                 alt="..."
               />
               <!-- Product details-->
@@ -384,7 +384,7 @@
               <!-- Product image-->
               <img
                 class="card-img-top"
-                src="/assets/img/Diadema.png"
+                src="./assets/img/Diadema.png"
                 alt="..."
               />
               <!-- Product details-->
@@ -435,7 +435,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-    <script type="module" src="/js/app.js"></script>
+    <script src="./js/scripts.js"></script>
+    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
